--- a/cart.html
+++ b/cart.html
@@ -26,10 +26,8 @@
                                 <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
                                 <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
                                 <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
-                                <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
                             </div>
                             <div class="second-image">
-                                <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
                                 <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
                                 <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
                                 <img src="img/WhatsApp Image 2022-02-11 at 10.50 13.png" alt="">
@@ -43,19 +41,23 @@
                                 <i class="bi bi-star-fill"></i>
                                 <i class="bi bi-star-fill"></i>
                                 <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-half"></i><span class="text-dark">4,5</span></i>
+                                <i class="bi bi-star-half"></i><span class="text-dark"> 4,5</span></i>
                             </div>
                             <hr>
                             <h2>$10/ <span class="text-secondary" style="font-size: 20px;">Plant</span></h2>
-                            <div class="order mt-4 text-secondary" style="font-size: 25px;">
-                                <p>Your Order</p>
+                            <div class="order-item mt-4 text-secondary" style="font-size: 25px;">
                                 <div class="container-add">
-                                    <button class="btn" onclick="decrement()">-</button>
-                                    <div class="vertical-hr" style="margin-right: 40px;"></div>
-                                    <div class="value text-success" id="quantity">0</div>
-                                    <div class="vertical-hr" style="margin-left: 40px;"></div>
-                                    <button class="btn" onclick="increment()">+</button>
-                                    <span class="label">Plant</span>
+                                    <div class="title">
+                                        <p>Your Order</p>
+                                    </div>
+                                    <div class="add-items">
+                                        <button class="btn" onclick="decrement()">-</button>
+                                        <div class="vertical-hr" style="margin-right: 40px;"></div>
+                                        <div class="value text-success" id="quantity">0</div>
+                                        <div class="vertical-hr" style="margin-left: 40px;"></div>
+                                        <button class="btn" onclick="increment()">+</button>
+                                        <span class="label">Plant</span>
+                                    </div>
                                 </div>
                             </div>
                             <div class="min-order text-secondary">
@@ -123,12 +125,14 @@
             <div class="summary">
                 <div class="box">
                     <div class="summary-title text-center">
-                        <h2>Summary</h2>
+                        <div class="title-summary text-secondary">
+                            <h2>Summary</h2>
+                        </div>
                     </div>
                     <div class="line"></div>
                     <div class="content">
                         <div class="order">
-                            <h5>Your Order :</h5>
+                            <h5 class="text-secondary">Your Order :</h5>
                             <div id="order-quantity">0</div>
                         </div>
                         <div class="price">
@@ -136,7 +140,7 @@
                             <div id="price">$0</div>
                         </div>
                         <div class="total">
-                            <h5>Total :</h5>
+                            <h5 class="text-secondary">Total :</h5>
                             <div id="total">$0</div>
                         </div>
                         <div class="button">
@@ -162,14 +166,14 @@
                 slidesToShow: 1,
                 slidesToScroll: 1,
                 fade: true,
-                asNavFor: '.second-img'
+                asNavFor: '.second-image'
             });
         });
 
         $(document).ready(function () {
             $('.second-image').slick({
                 arrows: false,
-                asNavFor: '.first-img',
+                asNavFor: '.first-image',
                 slidesToShow: 3,
                 slidesToScroll: 1,
                 centerMode: true,
